Make create button and search input display dynamically.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -42,32 +42,15 @@
         <div class="col-md-12">
             <div class="box">
                 <div class="box-header with-border js-manage-header">
-                    <div class="col-md-12">
-                        <button class="js-entity-create btn btn-success pull-right">
-                            <i class="fa-plus-circle fa" aria-hidden="true"></i> Create new {{ entity_name|trans|lower }}</button>
+                    <div class="col-md-12 js-manage-header-create-button-container">
+                        <!-- create button table manager template -->
                     </div>
                     <div class="col-md-12" style="margin-top: 20px;">
                         <div class="col-md-4" style="padding-left: 0px;">
-                            <label>{{ 'Show'|trans }}
-                                <select id="show-{{ entity_name|trans|lower|trim(' ') }}s-per-page" name="manage-per-page" aria-controls="per page"
-                                        class="form-control input-sm js-manage-show-per-page"
-                                        style="width: 75px; display: inline-block;">
-                                    <option value="10">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                </select>
-                                entries</label>
+
                         </div>
-                        <div class="col-md-4 pull-right" style="padding-right: 0px; display: none;">
-                            <label class="pull-right">Search:
-                                <div class="btn-group">
-                                    <input type="search" class="form-control js-manage-search" placeholder="Search" aria-controls="search"
-                                           style="width: 248px; display: inline-block;">
-                                    <span class="glyphicon glyphicon-remove-circle js-manage-search-clear"
-                                          style="display: none;"></span>
-                                </div>
-                            </label>
+                        <div class="col-md-4 pull-right js-manage-header-search-container" style="padding-right: 0px;">
+                            <!-- create search table manager template -->
                         </div>
                     </div>
                 </div>
@@ -82,21 +65,20 @@
                                     {% if field.label is not defined %}{{ field.name|trans|upper }}{% else %}{{ field.label|trans|upper }}{% endif %}
                                 </th>
                             {% endfor %}
-                            <th width="{% if buttons is defined %}{{ buttons|length * 32 + 100 }}{% else %}100{% endif %}" scope="col">MANAGE</th>
+                            <th width="{% if buttons is defined %}{{ buttons|length * 42 + 132 }}{% else %}132{% endif %}" scope="col">MANAGE</th>
                         </tr>
                         </thead>
                         <tbody>
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th width="60" class="text-center" scope="col">#</th>
+                            <th>#</th>
                             {% for field in fields %}
-                                <th {% if field.col_with is defined %} width="{{ field.col_with }}" {% endif %} scope="col"
-                                        {% if field.class is defined %} class="{{ field.class }}" {% endif %}>
+                                <th {% if field.class is defined %} class="{{ field.class }}" {% endif %}>
                                     {% if field.label is not defined %}{{ field.name|trans|upper }}{% else %}{{ field.label|trans|upper }}{% endif %}
                                 </th>
                             {% endfor %}
-                            <th width="{% if buttons is defined %}{{ buttons|length * 32 + 100 }}{% else %}100{% endif %}" scope="col">MANAGE</th>
+                            <th>MANAGE</th>
                         </tr>
                         </tfoot>
                     </table>
@@ -120,6 +102,38 @@
 {% block javascripts %}
     {{ parent() }}
 
+    <!-- create button table manager template -->
+    <script type="text/template" id="js-manager-create-button-template">
+        <button class="js-entity-create btn btn-success pull-right">
+            <i class="fa-plus-circle fa" aria-hidden="true"></i> {{ 'Create new'|trans }} {{ entity_name|trans|lower }}</button>
+    </script>
+
+    <!-- create search table manager template -->
+    <script type="text/template" id="js-manager-search-template">
+        <label class="pull-right">Search:
+            <div class="btn-group">
+                <input type="search" class="form-control js-manage-search" placeholder="Search" aria-controls="search"
+                       style="width: 248px; display: inline-block;">
+                <span class="glyphicon glyphicon-remove-circle js-manage-search-clear"
+                      style="display: none;"></span>
+            </div>
+        </label>
+    </script>
+
+    <!-- create search table manager template -->
+    <script type="text/template" id="js-manager-show-per-page-template">
+        <label>{{ 'Show'|trans }}
+            <select id="show-{{ entity_name|trans|lower|trim(' ') }}s-per-page" name="manage-per-page" aria-controls="per page"
+                    class="form-control input-sm js-manage-show-per-page"
+                    style="width: 75px; display: inline-block;">
+                <option value="10">10</option>
+                <option value="25">25</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+            </select>
+            entries</label>
+    </script>
+
     <!-- row table manager template -->
     <script type="text/template" id="js-manager-row-template">
         <tr data-id="<%= id %>" data-i="<%= index %>">
@@ -129,7 +143,13 @@
                     {{ render.field(field.name, field) }}
                 </td>
             {% endfor %}
-            <td>
+            <td style="text-align: center;">
+                <% if (viewButton) { %>
+                <button type="button" data-backdrop="static" data-keyboard="false" class="js-entity-edit btn btn-default btn-sm pull-left"
+                        style="margin-left: 3px">
+                    <i class="fas fa-eye" aria-hidden="true"></i>
+                </button>
+                <% } %>
                 {% if buttons is defined %}
                     {% for button in buttons %}
                         {#
