Make dynamically all related to pagination.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -46,7 +46,7 @@
                         <!-- create button table manager template -->
                     </div>
                     <div class="col-md-12" style="margin-top: 20px;">
-                        <div class="col-md-4" style="padding-left: 0px;">
+                        <div class="col-md-4 js-manage-header-per-page-container" style="padding-left: 0px;">
 
                         </div>
                         <div class="col-md-4 pull-right js-manage-header-search-container" style="padding-right: 0px;">
@@ -273,7 +273,7 @@
                 swalFormOptions: swalFormOptions,
                 swalConfirmOptions: swalConfirmOptions,
                 toastOptions: toastOptions,
-                showPerPage: 10,
+                pagination: true,
             });
         });
     </script>
