--- a/templates/stocks_dividend/index.html.twig
+++ b/templates/stocks_dividend/index.html.twig
@@ -75,7 +75,7 @@
             window.crudManager.withEditButton();
             window.crudManager.withDeleteButton();
 
-            window.crudManager.loadRows();
+            window.crudManager.render();
         });
     </script>
 {% endblock %}
