--- a/templates/accounts/index.html.twig
+++ b/templates/accounts/index.html.twig
@@ -34,7 +34,7 @@
             window.crudManager.withEditButton();
             window.crudManager.withDeleteButton();
 
-            window.crudManager.loadRows();
+            window.crudManager.render();
         });
     </script>
 {% endblock %}
