--- a/templates/brokers/index.html.twig
+++ b/templates/brokers/index.html.twig
@@ -40,7 +40,7 @@
             window.crudManager.withEditButton();
             window.crudManager.withDeleteButton();
 
-            window.crudManager.loadRows();
+            window.crudManager.render();
         });
     </script>
 
