Create static detail stock view.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -145,7 +145,7 @@
             {% endfor %}
             <td style="text-align: center;">
                 <% if (viewButton) { %>
-                <button type="button" data-backdrop="static" data-keyboard="false" class="js-entity-edit btn btn-default btn-sm pull-left"
+                <button type="button" data-backdrop="static" data-keyboard="false" class="js-entity-view btn btn-default btn-sm pull-left"
                         style="margin-left: 3px">
                     <i class="fas fa-eye" aria-hidden="true"></i>
                 </button>
