--- a/assets/css/StockForm.scss
+++ b/assets/css/StockForm.scss
@@ -1,4 +1,5 @@
 @import "~select2/dist/css/select2.css";
+@import "~bootstrap-slider/dist/css/bootstrap-slider.css";
 
 .select2-container .select2-selection--single {
     height: 34px;
@@ -14,3 +15,120 @@
 .select2-results__option {
     font-size: 14px;
 }
+
+.swal2-content {
+    .box-body {
+        margin-top: 20px;
+    }
+}
+
+.stock-price-block {
+    margin-right: 20px;
+    zoom: 1;
+    display: inline-block;
+
+    .last-price {
+        font-size: 36px;
+        font-weight: 700;
+    }
+
+    .change {
+        color: #ff333a;
+        font-weight: 500;
+        font-size: 24px;
+    }
+
+    .updated-at {
+        font-size: 12px;
+        font-weight: 400;
+        text-align: left;
+    }
+}
+
+.stock-buttons-block {
+    zoom: 1;
+    display: inline-block;
+
+    [role="buy"] {
+        margin-right: 8px;
+    }
+}
+
+.stock-price-row {
+    margin-left: 0px;
+    margin-right: 0px;
+
+    table {
+        font-size: 16px;
+
+        tr {
+            height: 30px;
+            border-bottom-width: 1px;
+            border-bottom-style: solid;
+            border-color: #e0e4e9;
+
+            td {
+                padding: 2px;
+            }
+
+            td[scope="key"] {
+                color: #9b9b9b !important;
+                text-align: left;
+            }
+
+            td[scope="value"] {
+                color: #000;
+                font-weight: 400;
+                text-align: right;
+            }
+        }
+
+    }
+}
+
+.stock-prev-close-open-price-block {
+    text-align: left;
+}
+
+.stock-open-close-day-price-block {
+
+    .slider.slider-disabled {
+
+        .slider-track {
+            cursor: auto;
+        }
+
+        .slider-handle:hover {
+            cursor: auto;
+        }
+    }
+
+    .stock-open-close-day-price-slider {
+
+        .slider.slider-horizontal {
+            margin: 0 10px;
+        }
+
+        b {
+            color: #000;
+            font-weight: 400;
+        }
+    }
+
+    .stock-open-close-day-price-slider-type{
+        text-align: center;
+        font-size: 12px;
+
+        span {
+            color: #9b9b9b !important;
+        }
+    }
+}
+
+.stock-description-row {
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
