Make dynamical stock detail view.
Added twig extension to help to determinate whether or not to parser a template value. Made all variable elements in the view dynamical.

--- a/assets/css/StockForm.scss
+++ b/assets/css/StockForm.scss
@@ -16,6 +16,14 @@
     font-size: 14px;
 }
 
+.swal2-form-title {
+    display: block !important;
+
+    .small {
+        font-size: 50%;
+    }
+}
+
 .swal2-content {
     .box-body {
         margin-top: 20px;
