--- a/templates/Components/ui/table-simple-key-value.html.twig
+++ b/templates/Components/ui/table-simple-key-value.html.twig
@@ -1,9 +1,15 @@
+{% set compile = false %}
+
+{% if tmpl is defined and tmpl == true %}
+    {% set compile = true %}
+{% endif %}
+
 <table class="table table-responsive no-border no-margin">
     <tbody>
     {% for row in rows %}
         <tr>
             <td scope="key">{{ row.key|trans }}</td>
-            <td scope="value">{{ row.value }}</td>
+            <td scope="value">{{ row.value|compile_tmpl(compile) }}</td>
         </tr>
     {% endfor %}
     </tbody>
