--- a/templates/Components/ui/range-slider-show.html.twig
+++ b/templates/Components/ui/range-slider-show.html.twig
@@ -1,8 +1,15 @@
+{% set compile = false %}
+
+{% if tmpl is defined and tmpl == true %}
+    {% set compile = true %}
+{% endif %}
+
 <div class="col-xs-12 no-padding stock-open-close-day-price-slider">
-    <b>{{ min_price }}</b>
+    <b>{{ min_price|compile_tmpl(compile) }}</b>
     <input id="{{ id }}" type="text"
-           data-slider-min="{{ min_price }}" data-slider-max="{{ max_price }}" data-slider-value="{{ current_price }}" data-slider-enabled="false"/>
-    <b>{{ max_price }}</b>
+           data-slider-min="{{ min_price|compile_tmpl(compile) }}" data-slider-max="{{ max_price|compile_tmpl(compile) }}"
+           data-slider-value="{{ current_price|compile_tmpl(compile) }}" data-slider-enabled="false"/>
+    <b>{{ max_price|compile_tmpl(compile) }}</b>
 </div>
 <div class="col-xs-12 no-padding stock-open-close-day-price-slider-type">
     <span>{{ type }}</span>
