Add choose broker to the create wallet view.
- Add function findAllMatching to Repository.
- Add filter login to all function to Api\BrokerController.
- Added broker choice to the Form type.
- Create BrokerChoiceType and ChoiceToBrokerTransformer.
- Created scss files.
- Added select2 load into js.
- Add ccs to the view.

--- a/templates/wallets/index.html.twig
+++ b/templates/wallets/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block page_content %}
     {{ parent() }}
+
+    <link rel="stylesheet" href="{{ asset('build/wallet_form.css') }}">
 {% endblock %}
 
 {% block javascripts %}
