Add delete wallet.

--- a/templates/wallets/index.html.twig
+++ b/templates/wallets/index.html.twig
@@ -32,6 +32,8 @@
             window.crudManager.withCreateButton();
             // add button edit
             crudManager.withEditButton();
+            // add button delete
+            crudManager.withDeleteButton();
 
             window.crudManager.render();
         });
