--- a/templates/stocks/index.html.twig
+++ b/templates/stocks/index.html.twig
@@ -1,23 +1,41 @@
-{% extends 'Components/Layout/crud-manage.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
+
+    {% include 'Components/ui/crud-manage-css.html.twig' %}
 
     <link rel="stylesheet" href="{{ asset('build/stock_form.css') }}">
 {%  endblock %}
 
 {% block page_content %}
-    {{ parent() }}
+    {% include 'Components/ui/crud-manage-table.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
 
+    {% include 'Components/ui/crud-manage-scripts.html.twig' %}
+
     <script src="{{ asset('build/stock_form.js') }}"></script>
 
     <script>
         $(document).ready(function() {
-            let crudManager = window.crudManager;
+            // Create page instance
+            let $crudManagerRowBox = $('.{{ js_crud_manage_class|default('js-crud-manage-row-box') }}');
+
+            let contentWrapper = $crudManagerRowBox.closest('section');
+            let entityType = $crudManagerRowBox.data('entity-type');
+
+            // Create CRUDManage instance @see public/assets/js/CRUDManage.js
+            let crudManager = new CRUDManage({
+                entityType: entityType,
+                wrapper: contentWrapper,
+                swalFormOptions: window.swalFormOptions,
+                swalConfirmOptions: window.swalConfirmOptions,
+                toastOptions: window.toastOptions,
+                pagination: true,
+            });
 
             // add search input function
             crudManager.withSearch(function (stocks, search) {
