--- a/templates/wallets/index.html.twig
+++ b/templates/wallets/index.html.twig
@@ -1,13 +1,21 @@
-{% extends 'Components/Layout/crud-manage.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
 
+    {% include 'Components/ui/crud-manage-css.html.twig' %}
+
     <link rel="stylesheet" href="{{ asset('build/wallet_form.css') }}">
+{% endblock %}
+
+{% block page_content %}
+    {% include 'Components/ui/crud-manage-table.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
+
+    {% include 'Components/ui/crud-manage-scripts.html.twig' %}
 
     <script src="{{ asset('build/wallet_form.js') }}"></script>
 
@@ -26,10 +34,26 @@
                 },
             };
 
+            // Create page instance
+            let $crudManagerRowBox = $('.{{ js_crud_manage_class|default('js-crud-manage-row-box') }}');
+
+            let contentWrapper = $crudManagerRowBox.closest('section');
+            let entityType = $crudManagerRowBox.data('entity-type');
+
+            // Create CRUDManage instance @see public/assets/js/CRUDManage.js
+            let crudManager = new CRUDManage({
+                entityType: entityType,
+                wrapper: contentWrapper,
+                swalFormOptions: window.swalFormOptions,
+                swalConfirmOptions: window.swalConfirmOptions,
+                toastOptions: window.toastOptions,
+                pagination: true,
+            });
+
             const form = new WalletForm(swalFormOptionsText);
 
-            window.crudManager.withForm(form);
-            window.crudManager.withCreateButton();
+            crudManager.withForm(form);
+            crudManager.withCreateButton();
             // add button edit
             crudManager.withEditButton();
             // add button delete
@@ -37,7 +61,7 @@
             // add button extra
             crudManager.withExtraButton();
 
-            window.crudManager.render();
+            crudManager.render();
 
 
 
